Issue eclipse/ditto#561: Changed unit tests to use `DittoHeaders.readGrantedSubjects` instead of deprecated `readSubjects`.
Signed-off-by: Juergen Fickel <juergen.fickel@bosch-si.com>